--- a/HiddenFBpictures/app/src/main/res/layout/albumrow.xml
+++ b/HiddenFBpictures/app/src/main/res/layout/albumrow.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:padding="3dp"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/album_pic_back"
     android:layout_height="match_parent">
 <ImageView
     android:id="@+id/coverAlbum"
