--- a/HiddenFBpictures/app/src/main/res/layout/picturerow.xml
+++ b/HiddenFBpictures/app/src/main/res/layout/picturerow.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
     <ImageView
-        android:background="@color/colorPrimary"
+        android:background="@drawable/album_pic_back"
+
         android:padding="@dimen/padding_all"
         android:id="@+id/imageone"
         android:layout_margin="@dimen/small_margin"
