--- a/HiddenFBpictures/app/src/main/res/menu/menu.xml
+++ b/HiddenFBpictures/app/src/main/res/menu/menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-<item android:icon="@mipmap/ic_launcher"
-    android:id="@+id/userPic"
+<item android:icon="@drawable/hidenlogo"
+    android:id="@+id/niceicone"
     android:title="userPic"
     app:showAsAction="always"/>
     <item
         android:id="@+id/logout"
-        android:title="logout"
+        android:title="contact us"
         />
 
 </menu>
