--- a/HiddenFBpictures/app/src/main/res/values/dimens.xml
+++ b/HiddenFBpictures/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="grid_pict_one">1dp</dimen>
     <dimen name="stroke_button">1dp</dimen>
     <dimen name="raduis_button">10dp</dimen>
+    <dimen name="raduis_pic_album">5dp</dimen>
     <dimen name="album_height">100dp</dimen>
     <dimen name="small_margin">2dp</dimen>
     <dimen name="text_size1">15dp</dimen>
