add firebase storage to project

--- a/HiddenFBpictures/app/src/main/res/layout/activity_main_pictures.xml
+++ b/HiddenFBpictures/app/src/main/res/layout/activity_main_pictures.xml
@@ -9,6 +9,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/uploadImg"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <GridView
         android:layout_weight="50"
         android:id="@+id/pictlist"
