--- a/HiddenFBpictures/app/src/main/res/layout/activity_main2.xml
+++ b/HiddenFBpictures/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hidden.mohamedwahabi.hiddenfbpictures.Main2Activity">
+    tools:context="com.hidden.mohamedwahabi.hiddenfbpictures.activites.Main2Activity">
 
 
     <LinearLayout
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:onClick="Prev"
+                    android:onClick="prev"
                     android:text="Previews"
                     android:id="@+id/prev"
                     android:layout_weight="5"
@@ -50,7 +50,7 @@
                     style="@style/butStyle"
                     android:layout_height="match_parent" />
                 <Button
-                    android:onClick="Next"
+                    android:onClick="next"
                     android:text="Next"
                     android:id="@+id/next"
                     android:layout_weight="5"
